--- a/day8_blue/day8_blue.Rmd
+++ b/day8_blue/day8_blue.Rmd
@@ -35,11 +35,14 @@ ggplot()+
   coord_sf()
 ```
 
+
+
 ```{r}
 tmap::tm_shape(oz_states) +
     tmap::tm_polygons() 
 ```
 
+## First sat vis of Australia
 
 Then, select the raster images from source.
 
@@ -122,103 +125,71 @@ dev.off()
 ```
 
 
-```{r}
-st_crs(sat_vis) = st_crs(4283)
-st_crs(oz_states)=st_crs(4283)
-oz_states <- st_transform(oz_states, crs = st_crs(sat_vis))
-```
+## Second sat vis of Australia
+
 
 ```{r}
-ggplot() + 
+library(showtext)
+library(extrafont)
+fonts()
+loadfonts()
+font_add_google("Gochi Hand", "gochi")
+font_add_google("Schoolbell", "bell")
+font_add_google('Syncopate', 'Syncopate')
+showtext_opts(dpi = 320)
+showtext_auto(enable = T)
+```
+
+Choose the image and download it with `curl_download()`
+
+```{r}
+files <- bomrang::get_available_imagery() %>%
+  stringr::str_subset("202001072100") 
+curl::curl_download("raster/ftp://ftp.bom.gov.au/anon/gen/gms/IDE00422.202111082100.tif",
+                    "sat_vis.tif")
+img_vis  <- file.path("/Users/federica/Documents/R/R_general_resources/Maps/raster", "IDE00422.202111082100.tif")
+library(stars)
+sat_vis <- read_stars(img_vis, RasterIO = list(nBufXSize = 600, nBufYSize = 600))
+#sat_inf <- read_stars(img_inf, RasterIO = list(nBufXSize = 600, nBufYSize = 600))
+oz_states <- st_transform(oz_states, crs = st_crs(sat_vis))
+cities <- oz_capitals %>% 
+  st_as_sf(coords = c("lon", "lat"), crs = 4326, remove = FALSE)
+cities <- st_transform(cities, st_crs(sat_vis))
+```
+
+
+
+```{r}
+final2 <- ggplot() + 
   geom_stars(data = sat_vis, show.legend = FALSE) +
-  #geom_sf(data = oz_states, fill = NA, color = "green") + 
+  geom_sf(data = oz_states, fill = "#6354c4", color = "#a7c2cc",size=0.3) + 
+  geom_sf(data = cities, color = "#15191f") + 
   coord_sf() + 
   theme_void() + 
-  scale_fill_gradient(low = "black", high = "white")
-```
-
-
-```{r}
-ggplot() + 
-  geom_stars(data = sat_vis, show.legend = FALSE) +
-  facet_wrap(vars(band)) + 
-  coord_equal() + 
-  scale_fill_gradient(low = "#0b2e66", high = "#b4c4de")
-```
-
-Then we go back to ozmaps::ozmap_states for some data adjustments.
-The CRS (Coordinate Reference System) need to be checked.
-
-```{r}
-oz_states <- ozmaps::ozmap_states %>% filter(NAME != "Other Territories")
-oz_votes <- rmapshaper::ms_simplify(ozmaps::abs_ced)
-st_crs(oz_votes)
-
-# this waht releases my El Capitan :(
-# GDAL Error 1: No PROJ.4 translation for source SRS, coordinate transformation initialization has failed.
-
-st_crs(oz_votes) = st_crs(4283)
-
-
-# st_crs(oz_votes) == st_crs(4283)   -  # [1] FALSE ????
-ggplot(oz_votes) + geom_sf()
-
- ggplot(oz_votes) + geom_sf() + coord_sf(crs = st_crs(3112))
- 
- 
- st_crs(oz_states)= st_crs(4283)
-
-
-
-ggplot(oz_states) + geom_sf() + coord_sf(crs = st_crs(3112))
+  #scale_fill_gradient(low = "black", high = "white")+
+  geom_sf_text(data = cities, mapping = aes(label = city),color="#ced9eb",check_overlap = T,family="gochi") +
+   labs(title="Globe Observer",
+       subtitle="Sat View of Australia\n#30DayMapChalleng Day 8 - Blue",
+       caption="Datasource:Australian Bureau of Meterorology (BOM)\nInfographic: Federica Gazzelloni")+
+  ggthemes::theme_map()+
+  theme(text=element_text(family="gochi"),
+        legend.position = "none",
+        plot.background = element_rect(color="#1a1c3d",fill="#1a1c3d"),
+        plot.title = element_text(color="#9a9ddb",size=35,family="Syncopate",hjust=0.5),
+        plot.title.position = "panel",
+        plot.subtitle = element_text(color="#9a9ddb",size=15,vjust=-1,hjust=0.07),
+        plot.caption = element_text(color="#9a9ddb",size=12,hjust=0.8))
 ```
 
 
 
 ```{r}
-st_bbox(oz_states) # coordinates of the box
-st_cast(oz_states, "POLYGON")
-
-# as an example we can extrapolate the geometry for one specified location
-vic_geo<- oz_states %>% 
-  filter(NAME == "Victoria") %>% 
-  pull(geometry) 
-
-st_cast(vic_geo, "POLYGON")
-which.max(st_area(vic_geo))
-
-st_crs(sat_vis)= st_crs(4283)
-
-oz_states <- st_transform(oz_states, crs = st_crs(sat_vis))
-
-
-st_transform(oz_states)
+# save final plot
+ragg::agg_png("~/Documents/R/R_general_resources/30DayMapChallenge/day8_blue/blue2.png",
+              res = 320, width = 11, height = 8, units = "in")
+final2
+dev.off()
 ```
-
-
-```{r}
-sat_vis[1,1]
-```
-
-
-```{r}
-oz_states <- st_transform(oz_states, crs = st_crs(sat_vis))
-sat_vis <- st_transform(sat_vis, crs = st_crs(sat_vis))
-
-ggplot() + 
-  geom_stars(data = sat_vis, show.legend = FALSE) +
-  geom_sf(data = oz_states, fill = NA, color = "white") + 
-  coord_sf() + 
-  ggthemes::theme_map()  
-  #scale_fill_gradient(low = "black", high = "white")
-```
-
-
-
-
-
-
-
 
 
 
