day5 analog map

--- a/2023/day5_analog-map/day5_analog-map.qmd
+++ b/2023/day5_analog-map/day5_analog-map.qmd
@@ -2,7 +2,7 @@
 title: 'Analog Map'
 subtitle: 'Welcome to #30DayMapChallenge 2023 day 5'
 date: '2023-11-05'
-image: 'day5_analog-map.qmd'
+image: 'day5_analog-map.png'
 image-alt: ''
 description: ''
 output: html_document
