--- a/2023/day19_5-minute-map/day19_5-minute-map.qmd
+++ b/2023/day19_5-minute-map/day19_5-minute-map.qmd
@@ -20,6 +20,7 @@ A 5-minute map made with {tmap} package to visualize the Estimate Population cha
 ```{r}
 #| message: false
 #| warning: false
+library(tidyverse)
 library(tmap)
 library(tmaptools)
 ```
