day 22 north-is-not-always-up

--- a/2023/day20_outdoors/day20_outdoors.qmd
+++ b/2023/day20_outdoors/day20_outdoors.qmd
@@ -10,6 +10,11 @@ execute:
    eval: false
 ---
 
+# Overview
+
+`World` map of the Coastlines Scalerank. Data is from `{rnaturalearthhires}` package.
+
+
 
 ```{r}
 library(tidyverse)
