--- a/2023/day22_north-is-not-always-up/day22_north-is-not-always-up.qmd
+++ b/2023/day22_north-is-not-always-up/day22_north-is-not-always-up.qmd
@@ -7,12 +7,13 @@ image-alt: ''
 description: ''
 output: html_document
 execute: 
-   eval: false
+   eval: true
 ---
 
 
 # Overview
 
+This Map represent four countries with diverse GDP. One in the south side of the earth, Australia has a higher GDP value compared to northern side countries. Data is from the Worldbank database.
 
 
 - Southern Country: `Australia`
@@ -31,6 +32,7 @@ library(sf)
 
 
 ```{r}
+#| eval: false
 countries <- c("SWE", "FIN", "NOR", "AUS")
 indicators <- c("NY.GDP.PCAP.CD", "SI.POV.GINI", "SE.ADT.LITR.ZS", "SH.XPD.CHEX.PC.CD")
 
@@ -38,14 +40,19 @@ indicators <- c("NY.GDP.PCAP.CD", "SI.POV.GINI", "SE.ADT.LITR.ZS", "SH.XPD.CHEX.
 data <- WDI(country = countries, 
             indicator = indicators, 
             start = 2019, end = 2019, extra = TRUE)
+```
 
+
+```{r}
+#| echo: false
 # saveRDS(data,"data/data.rds")
+data <- readRDS("data/data.rds")
 data
 ```
 
 ```{r}
 world_geo<- spData::world%>%
-  select(iso_a2,geom)
+  dplyr::select(iso_a2,geom)
 
 all_data <- world_geo %>%
   left_join(data,by=c("iso_a2"="iso2c"))%>%
@@ -58,13 +65,12 @@ all_data <- world_geo %>%
 ```{r}
 library(mapview)
 #library(lwgeom)
-#lwgeom::
 library(rnaturalearth)
 
-world <- rnaturalearth::ne_countries(scale = 'small', returnclass = 'sf')
+world <- rnaturalearth::ne_countries(scale = 'small', 
+                                     returnclass = 'sf')
 
 # Fix polygons so they don't get cut in ortho projection
-
 world  <-st_cast(world,'MULTILINESTRING') %>%
   st_cast('LINESTRING', do_split=TRUE) %>%
   mutate(npts = mapview::npts(geometry, by_feature = TRUE)) %>%
@@ -80,11 +86,24 @@ ggplot() +
   coord_sf( crs= "+proj=ortho +lat_0=20 +lon_0=-10")
 ```
 ```{r}
+ ggplot() +
+  geom_sf(data=world, color="gray80",fill=NA)+
+  geom_sf(data=all_data,mapping=aes(fill=NY.GDP.PCAP.CD))+
+  coord_sf(crs="ESRI:54030")+
+  theme_bw()
+```
+
+
+```{r}
 sf::st_bbox(world)
 ```
+
+
 ```{r}
 sf::st_bbox(all_data)
 ```
+
+
 ```{r}
 text=tibble(text=c("The southern country (Australia) generally has a higher GDP per capita, lower income inequality, and other favorable social indicators\ncompared to some of the northern countries (Sweden, Finland, and Norway)."))
 ```
@@ -93,13 +112,15 @@ text=tibble(text=c("The southern country (Australia) generally has a higher GDP 
 ```{r}
 ggplot() +
   geom_sf(data=world, color="gray80",fill=NA) +
-  geom_sf(data=all_data,mapping=aes(fill=factor(round(NY.GDP.PCAP.CD))))+
+  geom_sf(data=all_data,
+          mapping=aes(fill=factor(round(NY.GDP.PCAP.CD))))+
   scale_fill_manual(
     na.value = "grey90",
     values = (viridis::inferno(4)),
     na.translate = FALSE,
     guide = guide_legend(reverse = TRUE)
   ) +
+  # this restricts the map view
   scale_x_continuous(limits = c(-10,20))+
   coord_sf(crs="ESRI:54030",clip = "off")+
   labs(fill="GDP per Capita US($)",
@@ -119,6 +140,7 @@ ggplot() +
 ```
 
 ```{r}
+#| eval: false
 ggsave("day22_day22_north-is-not-always-up.png",
        width=8)
 ```
