--- a/2023/day30_my-favourite/day30_my-favourite.qmd
+++ b/2023/day30_my-favourite/day30_my-favourite.qmd
@@ -95,7 +95,7 @@ ggplot()+
 
 
 ```{r}
-ggsave("day30_myfavorite.png",
+ggsave("day30_my-favorite.png",
        bg="white",width=7,height = 5)
 ```
 
